--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="D:/Coding/Java/ElectricCircuitProject/SwingDemo/jgoodies-common-1.8.1.jar"/>
 	<classpathentry kind="lib" path="D:/Coding/Java/ElectricCircuitProject/SwingDemo/flatlaf-3.0.jar"/>
 	<classpathentry kind="lib" path="D:/Coding/Java/ElectricCircuitProject/SwingDemo/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="mysql-connector-j-8.0.32.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
